--- a/package.json
+++ b/package.json
@@ -12,26 +12,23 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@heroicons/react": "^2.0.18",
-    "clsx": "^2.0.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
+    "@prisma/client": "^5.7.0",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.2.0",
-    "lucide-react": "^0.292.0",
-    "@prisma/client": "^5.7.0",
-    "prisma": "^5.7.0",
-    "pg": "^8.11.3",
-    "@types/pg": "^8.10.9",
+    "autoprefixer": "^10.4.16",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "date-fns-jalali": "^2.30.0-0",
-    "tsx": "^4.6.0"
+    "lucide-react": "^0.292.0",
+    "next": "14.0.0",
+    "postcss": "^8.4.31",
+    "prisma": "^5.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.0",
+    "tsx": "^4.6.0",
+    "typescript": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^8.51.0",
