--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.0",
     "tsx": "^4.6.0",
-    "typescript": "^5.2.0"
+    "typescript": "^5.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/xlsx": "^0.0.35",
     "eslint": "^8.51.0",
     "eslint-config-next": "14.0.0"
   }
