--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
+    "daisyui": "^5.1.7",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.0",
