--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.7.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.0.0",
     "daisyui": "^5.1.7",
     "date-fns": "^2.30.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.292.0",
     "next": "14.0.0",
     "postcss": "^8.4.31",
@@ -30,7 +34,9 @@
     "tailwindcss": "^3.3.0",
     "tsx": "^4.6.0",
     "typescript": "^5.2.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^4.1.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/xlsx": "^0.0.35",
